feat(testcontainers): refactor vshard and cartridge testcontainers (#64)
* feat(testcontainers): edit vshard and cartridge

* feat(testcontainers): fix after review